Book: TOC prevent text truncate

--- a/designsystem-dev/css/main.css
+++ b/designsystem-dev/css/main.css
@@ -1595,6 +1595,13 @@ table, .table, .path-mod-questionnaire#page-mod-questionnaire-complete .qn-answe
 .single-chapter-book .book_content > h3:first-of-type {
   display: none; }
 
+.block_book .book_toc .d-flex:not(.action-list) {
+  display: block !important; }
+  .block_book .book_toc .d-flex:not(.action-list) .text-truncate {
+    white-space: initial; }
+  .block_book .book_toc .d-flex:not(.action-list) .action-list {
+    text-align: right; }
+
 #page-mod-data-edit .mod-data-input > :not(.editor_atto_wrap) {
   display: none; }
 
